--- a/Assignment1-Knowing_basics_html/Redirect.html
+++ b/Assignment1-Knowing_basics_html/Redirect.html
@@ -17,7 +17,7 @@
             <hr>
             <div>
                 <a href="Portfolio.html" target="rightpanel">
-                    <img src="./Resources/Portfolio.png" width="100%" height="60px" alt="Portfolio">
+                    <img src="./Resources/portfolio.png" width="100%" height="60px" alt="Portfolio">
                 </a>
             </div>
             <hr>
@@ -29,7 +29,7 @@
             <hr>
             <div>
                 <a href="Diary.html" target="rightpanel">
-                    <img src="./Resources/Diary.png" width="100%" height="60px" alt="Diary">
+                    <img src="./Resources/diary.png" width="100%" height="60px" alt="Diary">
                 </a>
             </div>
             <hr>
