Additional changes to Visual Vault

--- a/Assignment1-Knowing_basics_html/Forms.html
+++ b/Assignment1-Knowing_basics_html/Forms.html
@@ -36,7 +36,7 @@
                 </select>
                 </br>
                 </br>
-                <label for="gossip">Subscription to Weekly Gossip</label>
+                <label for="gossip">Do you want to Subscribe to Weekly NewsLetter ?</label>
                 </br>
                 <input type="radio" name="yes" id="yes" value="yes">
                 <label for="yes">Yes</label>
@@ -72,17 +72,16 @@
                 <input type="password" name="retypepassword" id="retypepassword">
                 </br>
                 </br>
-                <input type="checkbox" id="agreement" required name="T-C" value="applied">
-                <label for="agreement"><a href="#">Agree to Terms to process personal info</a>
-                </label>
-                </br>
-                </br>
                 <label for="color">Choose Favourite Color
                 </label>
                 <input type="color" name="color" id="color">
                 </br>
                 </br>
-
+                <input type="checkbox" id="agreement" required name="T-C" value="applied">
+                <label for="agreement"><a href="#">Agree to Terms to process personal info</a>
+                </label>
+                </br>
+                </br>
                 <input type="reset" value="Reset">
                 <input type="submit" value="Submit">
             </form>
