--- a/Assignment1-Knowing_basics_html/Redirect.html
+++ b/Assignment1-Knowing_basics_html/Redirect.html
@@ -17,7 +17,7 @@
             <hr>
             <div>
                 <a href="Portfolio.html" target="rightpanel">
-                    <img src="./Resources/portfolio.png" width="100%" height="60px" alt="Portfolio">
+                    <img src="./Resources/portfolio.png" width="100%" height="50px" alt="Portfolio">
                 </a>
             </div>
             <hr>
@@ -29,7 +29,7 @@
             <hr>
             <div>
                 <a href="Diary.html" target="rightpanel">
-                    <img src="./Resources/diary.png" width="100%" height="60px" alt="Diary">
+                    <img src="./Resources/diary.png" width="80%" height="50px" alt="Diary">
                 </a>
             </div>
             <hr>
@@ -37,11 +37,11 @@
         </section>
 
         <section id="contact">
-            <h3>Contact Me</h3>
+            <h3>Contact Us</h3>
             <hr>
             <div>
                 <a href="Forms.html" target="rightpanel">
-                    <img src="./Resources/contact.png" width="100%" height="60px" alt="Contact">
+                    <img src="./Resources/contact.png" width="80%" height="50px" alt="Contact">
                 </a>
             </div>
             <hr>
@@ -53,7 +53,7 @@
             <hr>
             <div>
                 <a href="Miscellanous.html" target="rightpanel">
-                    <img src="./Resources/miscellanous.png" width="100%" height="60px" alt="Extras">
+                    <img src="./Resources/miscellanous.png" width="80%" height="50px" alt="Extras">
                 </a>
             </div>
             <hr>
