--- a/Assignment1-Knowing_basics_html/Main.html
+++ b/Assignment1-Knowing_basics_html/Main.html
@@ -22,7 +22,8 @@
 
         .grid-container img {
             max-width: 100%;
-            max-height: 100%;
+            max-height: 80%;
+            border-radius: 100%;
         }
     </style>
 </head>
@@ -31,9 +32,9 @@
     <header>
         <div class="grid-container" style="display: inline-block; padding-left: 40%;">
 
-            <span style="float: left;"> <img src="Resources/portfolio.png" alt="Visual Vault" width="100"> </span>
+            <span style="float: left; border-radius: 20%;"> <img src="Resources/main-logo.jpeg" alt="Visual Vault" width="100"> </span>
             <h1>Visual Vault</h1>
-            <marquee behavior="scroll" direction="middle" scrollamount="20" width="100%" height="20px"
+            <marquee behavior="scroll" direction="middle" scrollamount="8" width="100%" height="20px"
                 style="text-align: center;">
                 Create stunningly perfect portfolios with our easy-to-use design tools.
             </marquee>
@@ -48,7 +49,7 @@
     <footer>
         <address> 
             Contact us: <a href="mailto:support@visualvault.com">support@visualvault.com</a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Mobile no.: <a href="tel:+918448xxxx18">8448xxxx18</a>
+            Mobile no.: <a href="tel:+918448382828">8448382828</a>
         </address>
     </footer>
 </body>
